--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -49,7 +49,7 @@
     ></script>
 
     <!---->
-    <title>Bee.AR Web</title>
+    <title>Appi.AR</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
